Fix the score being cut off at certain aspect ratios

--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .excalibur-scale-right {
-  transform-origin: right;
+  transform-origin: 100% 0;
   transform: scale(var(--pixel-conversion), var(--pixel-conversion));
 }
 
